@@ -1,6 +1,6 @@
-MD5 c82537d23c24cdbc2a02f74e8497d062 rapidsvn-0.3.0.ebuild 1266
-MD5 9982550bc71cca8ffc05b65a4125c033 ChangeLog 516
-MD5 9ecd293f009575a09b921ac14e34195c rapidsvn-0.2.0.ebuild 1266
+MD5 e69244ad92d8a1ca2849d0d0678c1970 rapidsvn-0.3.0.ebuild 1265
+MD5 9ed21b0dd832fbb39ced9c2a1c951630 ChangeLog 704
+MD5 89d2a855b5e624a9606ad58acd41345f rapidsvn-0.2.0.ebuild 1264
 MD5 e8212a950e1f0fccf9fb8f1a7a361c71 metadata.xml 546
 MD5 f7dbfabe443f29627c37db6a3702346d files/digest-rapidsvn-0.2.0 66
 MD5 defdae3eecae5fc15f277d890c518416 files/digest-rapidsvn-0.3.0 66
