@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/rapidsvn
 # Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/rapidsvn/Attic/ChangeLog,v 1.2 2003/09/01 18:23:31 iggy Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/rapidsvn/Attic/ChangeLog,v 1.3 2003/10/16 20:50:10 iggy Exp $
+
+  16 Oct 2003; <iggy@gentoo.org> rapidsvn-0.2.0.ebuild, rapidsvn-0.3.0.ebuild:
+  should depend on =dev-util/subversion-0.28.0, thanks to Martin Ehmsen for the
+  heads up, fixes bug 31181
 
 *rapidsvn-0.3.0 (01 Sep 2003)
 
